# bobo-memory

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README_zh.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
bobo_memory/: __init__.py  cli.py  client.py  config.py  mcp_server.py
bobo_memory/compact/: __init__.py  boundary.py  invariants.py  session_swap.py  slicer.py  threshold.py
bobo_memory/core/: __init__.py  atomic.py  audit.py  context_pack.py  guard.py  janitor.py  manifest_cache.py  memdir.py  paths.py  policy.py  prompts.py  recall.py  triggers.py
bobo_memory/layers/: __init__.py  agent_memory.py  auto_memory.py  base.py  session_memory.py  team_memory.py  wiki.py
bobo_memory/lint/: __init__.py  checker.py
bobo_memory/snapshot/: __init__.py  manager.py  packager.py
bobo_memory/stream/: __init__.py  inbox.py  pipeline.py
bobo_memory/stream/adapters/: __init__.py  base.py  chat.py  file_watch.py  json_log.py  markdown.py  web_clipper.py
bobo_memory/tests/: __init__.py  test_capture_and_integrations.py  test_e2e.py  test_governance_hardening.py
bobo_memory/tools/: __init__.py  adapters.py  handlers.py  lifecycle.py  proposal.py  specs.py
bobo_memory/viewer/: __init__.py  app.py
docs/: AGENT_BRIEF_zh.md  AGENT_SAAS_TUTORIAL_zh.md  INTEGRATION_zh.md  TUTORIAL_zh.md
examples/: openai_demo.py
