[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bobo-memory"
version = "0.1.1"
description = "A universal memory middleware for LLM agents — file-based, scope-aware, BYO LLM."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "rank-bm25>=0.2.2",
    "filelock>=3.12",
    "watchdog>=4.0",
]

[project.optional-dependencies]
viewer = ["fastapi>=0.110", "uvicorn[standard]>=0.29", "jinja2>=3.1"]
embedding = ["sentence-transformers>=3.0"]
mcp = ["mcp>=1.0"]

[project.scripts]
bobo-memory = "bobo_memory.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["bobo_memory*"]
